--- a/views/orders/editOrder.ejs
+++ b/views/orders/editOrder.ejs
@@ -1,3 +1,5 @@
+<%- include('../partials/_head') %>
+
 <div class="box" >
     <div class="register-logo">
         <a href="#"><b>Edit</b>Order</a>
@@ -6,28 +8,28 @@
         <div class="row">
             <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                 <div class="well">
-                    <form action="/orders/saveEdit/{{oid}}/{{model}}/{{item_id}}" method="POST">
-                       <input type="hidden" name="pid" id="pid" value="{{model}}">
-                       <input type="hidden" name="totalAmount" id="totalAmount" value="{{totalAmount}}">
+                    <form action="/orders/saveEdit/<%=oid%>/<%=model%>/<%=item_id%>" method="POST">
+                       <input type="hidden" name="pid" id="pid" value="<%=model%>">
+                       <input type="hidden" name="totalAmount" id="totalAmount" value="<%=totalAmount%>">
                         <div class="form-group">
                             <label for="Order_ID">Order ID:</label>
-                            <input type="text" name="Order_ID" id="Order_ID" value="{{oid}}" class="form-control"
+                            <input type="text" name="Order_ID" id="Order_ID" value="<%=oid%>" class="form-control"
                                 readonly>
                         </div>
                         <div class="form-group">
                             <label for="model">Model</label>
-                            <input type="text" name="model" id="model" value="{{model_name}}" class="form-control"
+                            <input type="text" name="model" id="model" value="<%=model_name%>" class="form-control"
                                 readonly>
                         </div>
                       
                          <div class="form-group">
                             <label for="quantity">Quantity</label>
-                            <input type="number" name="quantity" id="quantity" value="{{quantity}}" class="form-control" >
+                            <input type="number" name="quantity" id="quantity" value="<%=quantity%>" class="form-control" >
                             
                         </div>
                         <div class="form-group">
                             <label for="unitprice">unitprice</label>
-                            <input type="text" name="unitprice" id="unitprice" value="{{unitprice}}" class="form-control" readonly>
+                            <input type="text" name="unitprice" id="unitprice" value="<%=unitprice%>" class="form-control" readonly>
                         </div>
 
                         <button  type="submit" class="btn btn-primary">Submit</button>
@@ -38,3 +40,4 @@
         </div>
     </div>
 </div>
+<%- include('../partials/_footer') %>
