--- a/views/products/InhouseStockProduct.ejs
+++ b/views/products/InhouseStockProduct.ejs
@@ -1,3 +1,6 @@
+
+<%- include('../partials/_head') %>
+
 <div class="container-fluid">
 
 
@@ -26,9 +29,9 @@
                                     <div class="col-md-2">
                                         <select class="form-control inp" name="invoice" id="invoice" required>
                                             <option value="">select One</option>
-                                            {{# each LocalPurchase}}
-                                            <option value="{{this._id}}">{{this.number}}</option>
-                                            {{/each}}
+                                            <% for(let i=0; i< LocalPurchase.length; i++){ %>
+                                            <option value="<%=LocalPurchase[i]._id%>"><%=LocalPurchase[i].number%></option>
+                                            <% } %>
                                         </select>
                                     </div>
 
@@ -210,7 +213,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
+                            <h4><%=productentry_msg%></h4>
                            
                         </div>
                     </div>
@@ -229,7 +232,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
+                            <h4><%=productentry_msg%></h4>
                            
                         </div>
                     </div>
@@ -248,7 +251,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{ productentry_msg }}</h4>
+                            <h4><%= productentry_msg %></h4>
                            
                         </div>
                     </div>
@@ -269,7 +272,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
+                            <h4><%=productentry_msg%></h4>
                             
                         </div>
                     </div>
@@ -288,7 +291,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
+                            <h4><%=productentry_msg%></h4>
                            
                         </div>
                     </div>
@@ -310,7 +313,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-md-offset-3 col-sm-offset-3">
                         <div class="well">
-                            <h4>{{productentry_msg}}</h4>
+                            <h4><%=productentry_msg%></h4>
                         </div>
                     </div>
                 </div>
@@ -321,3 +324,4 @@
 
 
 </div>
+<%- include('../partials/_footer') %>
